syntax = "proto3";

package todo_grpc;

option go_package = "../internal/delivery/grpc/task_grpc";

import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";

message Task {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    bool is_completed = 4;
    google.protobuf.Timestamp      UpdatedAt=5;
	google.protobuf.Timestamp      CreatedAt=6;
}

message TaskInput {
    string title = 1;
    string description = 2;
}

message TaskUpdate {
    uint64 id = 1;
    optional string title = 2;
    optional string description = 3;
    optional bool is_completed = 4;
}

message TasksList {
    repeated Task items = 1;
}

message Id {
    uint64 id = 1;
}

message DeleteResponse{
    string status = 1;
  }

service TaskService {
    rpc CreateTask (TaskInput) returns (Id);
    rpc GetTasks (google.protobuf.Empty) returns (TasksList);
    rpc GetTaskById (Id) returns (Task);
    rpc UpdateTask (TaskUpdate) returns (Task);
    rpc DeleteTask (Id) returns (DeleteResponse);
}